@@ -20,7 +20,7 @@
                 <configuration>
                     <source>21</source>
                     <target>21</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <enablePreview>true</enablePreview>
                 </configuration>
             </plugin>
         </plugins>
